added footer section

--- a/index.html
+++ b/index.html
@@ -39,10 +39,59 @@
                 </ul>
             </div>
         </section>
+        <section class="plan_container">
+            <h3 class="plan_title">My Plans</h3>
+            <div class="plan_content">
+                <div class="plan_items">
+                    <img src="images/icons/Web Development.png" alt="">
+                    <h3 class="plan_item_title">Web Development</h3>
+                    <p class="plan_item_des">I want to start</p>
+                </div>
+                <div class="plan_items">
+                    <img src="images/icons/Javascript.png" alt="">
+                    <h3 class="plan_item_title">Javascript</h3>
+                    <p class="plan_item_des">I want to learn</p>
+                </div>
+                <div class="plan_items">
+                    <img src="images/icons/Smoking Habit.png" alt="">
+                    <h3 class="plan_item_title">Smoking Habit</h3>
+                    <p class="plan_item_des">I want to end</p>
+                </div>
+                <div class="plan_items">
+                    <img src="images/icons/ecommerce.png" alt="">
+                    <h3 class="plan_item_title">ecommerce</h3>
+                    <p class="plan_item_des">I want to develop</p>
+                </div>
+            </div>
+        </section>
+        <section class="contact">
+            <h3 class="contact_title">Awlays keep a positive mindset</h3>
+            <button class="btn-callNow">Call Now</button>
+        </section>
     </main>
 
-    <footer>
+    <footer class="footer_section">
+        <div class="footer_column">
+            <h3 class="footer_title">Future</h3>
+            <p class="footer_des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <div class="footer_info">
+                <h5 class="footer_info_item">Email : info@gmail.com</h5>
+                <h5 class="footer_info_item">Phone : 01500 00 00 00</h5>
 
+            </div>
+            <div class="socail_links">
+                <a href=""><img src="images/icons/facebook.png" alt="" class="socali_link_items"></a>
+
+                <a href=""><img src="images/icons/twitter.png" alt="" class="socali_link_items"></a>
+
+                <a href=""><img src="images/icons/youtube.png" alt="" class="socali_link_items"></a>
+            </div>
+        </div>
+        <div class="footer_column">
+            <h3 class="sbu">Subscribe</h3>
+            <input type="email" name="" placeholder="Enter your email" id="email">
+            <input type="button" value="Subscribe">
+        </div>
     </footer>
 </body>
 
